[workspace.package]
version = "0.1.0"
authors = ["Mark Vainomaa <mikroskeem@mikroskeem.eu>"]
edition = "2021"

[workspace.dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"

[workspace]
members = [
    "nft"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
